@@ -111,6 +111,7 @@ ModCallbacks.MC_PRE_BACKDROP_RENDER_FLOOR = 1107
 ModCallbacks.MC_PRE_BACKDROP_RENDER_WATER = 1108
 ModCallbacks.MC_POST_BACKDROP_PRE_RENDER_WALLS = 1109
 ModCallbacks.MC_PRE_BACKDROP_CHANGE = 1141
+ModCallbacks.MC_POST_BACKDROP_CHANGE = 1142
 ModCallbacks.MC_PRE_PLAYER_USE_BOMB = 1220
 ModCallbacks.MC_POST_PLAYER_USE_BOMB = 1221
 ModCallbacks.MC_NPC_PICK_TARGET = 1222
